--- a/myobject/templates/home/book2.html
+++ b/myobject/templates/home/book2.html
@@ -35,7 +35,7 @@
 <body>
     <div class="nav">
         <!--<h1>Library Management System</h1>-->
-        <a href="{% url 'web_index' 1 %}"> Library management system </a>
+        <a href="{% url 'web_index0' %}"> Library management system </a>
         <ul class="links"> 
             <li class="items">Popular</li>
             <li class="items">Latests</li>
@@ -81,13 +81,11 @@
                 <th>Genre</th>
                 <th>ISBN</th>
                 <th>Author</th>
-                <th>Description</th>
                 <th>Image</th>
 
                 <th>Status</th>
                 <th>Addtime</th>
-                <th>Edit time</th>
-                <th>Operation</th>
+                
               </tr>
               {% for vo in categorylist %}
               <tr>
@@ -96,7 +94,7 @@
                 <td>{{ vo.genre }}</td>
                 <td>{{ vo.ISBN }}</td>
                 <td>{{ vo.author }}</td>
-                <td>{{ vo.description }}</td>
+                
                 
                 <td>
                   {% if vo.image %}
@@ -113,14 +111,11 @@
                   {% endif %}
                 </td>
                 <td width="12%">{{ vo.create_at|date:'Y-m-d' }}</td>
-                <td width="12%">{{ vo.update_at|date:'Y-m-d' }}</td>
+                
                 <td width="25%">
-                  <a href="{% url 'myadmin_category_edit' vo.id %}" class="btn btn-success btn-xs">
-                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit</a>
-                    <a type="button" href="{% url 'myadmin_category_delete' vo.id %}" class="btn btn-danger btn-xs">
-                      <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete</a>
-                  <a href="#" class="btn btn-warning btn-xs">
+                  <a href="{% url 'web_index_describe' vo.id %}" class="btn btn-success btn-xs">
                     <span class="glyphicon glyphicon-search" aria-hidden="true"></span> View book</a>
+                    
                 </td>
               </tr>
               {% endfor %}
@@ -128,8 +123,7 @@
           </div>
           <!-- /.box-body -->
           <div class="box-footer clearfix">
-            <a role="button" href="{% url 'myadmin_category_add' %}" class="btn btn-primary">
-              <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add book</a>
+            
               <ul class="pagination pagination-sm no-margin pull-right">
                   <li><a href="{% url 'web_index' pIndex|add:-1 %}?{{mywhere|join:'&'}}">&laquo;</a></li>
                   {% for p in plist %}
