--- a/myobject/templates/home/AboutUs.html
+++ b/myobject/templates/home/AboutUs.html
@@ -1,13 +1,63 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="AboutUs.css"> 
-    <title>About Us</title>
+    <link rel="stylesheet" href="{% static 'myadmin/local/css/nav.css' %}">
+    <link rel="stylesheet" href="{% static 'myadmin/local/css/homestyle.css' %}"> 
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>About us</title>
+    <!-- 支持响应式布局 -->
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <link rel="stylesheet" href="{% static 'myadmin/bower_components/bootstrap/dist/css/bootstrap.min.css'%}">
+    <!-- 象形字体 -->
+    <link rel="stylesheet" href="{% static 'myadmin/bower_components/font-awesome/css/font-awesome.min.css'%}">
+    <!-- 图标 -->
+    <link rel="stylesheet" href="{% static 'myadmin/bower_components/Ionicons/css/ionicons.min.css'%}">
+    <!-- 主题风格样式 -->
+    <link rel="stylesheet" href="{% static 'myadmin/dist/css/AdminLTE.min.css'%}">
+    <!-- AdminLTE 皮肤.这里选择的是skin-blue样式，我们还可以有其他皮肤可以选择. -->
+   <!--<link rel="stylesheet" href="{% static 'myadmin/dist/css/skins/skin-blue.min.css'%}"> -->
+    <!-- 兼容IE9以下浏览器 -->
+    <!--[if lt IE 9]>
+    <script src="local/js/html5shiv.min.js"></script>
+    <script src="local/js/respond.min.js"></script>
+    <![endif]-->
+    <!-- Google Font -->
+    <link rel="stylesheet" href="{% static 'myadmin/local/css/google_fonts.css'%}">
+    
 </head>
 <body>
+    <div class="nav">
+        <!--<h1>Library Management System</h1>-->
+        <a href="{% url 'web_index0' %}"> Library management system </a>
+        <ul class="links"> 
+            <a href="{% url 'about'  %}"> About us </a>
+            <li class="items">Latests</li>
+            <a href="{% url 'web_index' 1 %}"> Books </a>
+        </ul>
+        <!-- <input type='text' id='searchBox' placeholder='Search for book'></input> -->
+        <div class="box-tools">
+            <form action="{% url 'web_index' 1 %}" method ="get">
+              <div class="input-group input-group-sm" style="width: 150px;">
+                <input type="text" name="keyword" class="form-control pull-right" placeholder="Name/Genre/Author">
+
+                <div class="input-group-btn">
+                  <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+                </div>
+              </div>
+            </form>
+          </div>
+        <!-- <ul class="login"> -->
+            <!-- <li class="loginButton">Login</li> -->
+        <a href="myadmin"> Login</a>
+        
+        </ul>
+    </div>
+
     <div className=aboutLabel>
         About Us
     </div>
