--- a/myobject/templates/home/Home.html
+++ b/myobject/templates/home/Home.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'myadmin/local/css/nav.css' %}">
+    <link rel="stylesheet" href="{% static 'myadmin/local/css/homestyle.css' %}"> 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>订餐系统后台管理</title>
@@ -32,40 +33,47 @@
     <div class="nav">
         <h1>Library Management System</h1>
         <ul class="links"> 
-            <li class="items">Popular</li>
+            <a href="{% url 'about'  %}"> About us </a>
             <li class="items">Latests</li>
-            <li class="items">Books</li>
+            <a href="{% url 'web_index' 1 %}"> Books </a>
         </ul>
-        <input type='text' id='searchBox' placeholder='Search for book'></input>
-        <ul class="login">
-            <li class="loginButton">Login</li>
-        </ul>
+        <div class="box-tools">
+            <form action="{% url 'web_index' 1 %}" method ="get">
+              <div class="input-group input-group-sm" style="width: 150px;">
+                <input type="text" name="keyword" class="form-control pull-right" placeholder="Name/Genre/Author">
+
+                <div class="input-group-btn">
+                  <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+                </div>
+              </div>
+            </form>
+        </div>
+        <a href="{% url 'web_index' 1 %}"> Login</a>
+        <a href="{% url 'web_index_edu' 1 %}"> Education</a>
     </div>
     <h1 class=CategoryLabel>Categories</h1>
     <div class=Categories>
-        <img class=CategoryImage src='img/CategoryImages/BaE.png' alt='BusinessAndEcon'/>
-        <img class=CategoryImage src='img/CategoryImages/ESaT.png' alt='Education'/>
-        <img class=CategoryImage src='img/CategoryImages/LaF.png' alt='Literature'/>
-        <img class=CategoryImage src='img/CategoryImages/SNaM.png' alt='Science'/>
-        <img class=CategoryImage src='img/CategoryImages/HFaN.png' alt='Health'/>
-        <img class=CategoryImage src='img/CategoryImages/Law.png' alt='Law'/>
+        <img class=CategoryImage src="{% static 'myadmin/local/img/CategoryImages/BaE.png'%}" alt='BusinessAndEcon'/>
+        <img class=CategoryImage src="{% static 'myadmin/local/img/CategoryImages/ESaT.png'%}" alt='Education'/>
+        <img class=CategoryImage src="{% static 'myadmin/local/img/CategoryImages/LaF.png'%}" alt='Literature'/>
+        <img class=CategoryImage src="{% static 'myadmin/local/img/CategoryImages/SNaM.png'%}" alt='Science'/>
+        <img class=CategoryImage src="{% static 'myadmin/local/img/CategoryImages/HFaN.png'%}" alt='Health'/>
+        <img class=CategoryImage src="{% static 'myadmin/local/img/CategoryImages/Law.png'%}" alt='Law'/>
     </div>
     <h1 class=PopularLabel>Popular</h1>
     <div class=BooksAndArrows>
-        <img class=Arrows id=leftArrow src='img/leftarrow.png' alt="leftArrow" />
-        <ul class=BookContainerItems id="container" >
-            <li key=Books.id class=BookContainerItem>
-                <div class=BookContainer >
-                    <img class=Book src='img/BookCover/BookCover.jpg' alt='Book1'/>
-                    <div class=Title>title</div>
-                </div>
-            </li>
-        </ul>
-        <img class=Arrows id=rightArrow src='img/rightarrow.png' alt="rightArrow"/>
+        <img class=Arrows id=leftArrow src="{% static 'myadmin/local/img/leftarrow.png'%}" alt="leftArrow" />
+        {% for vo in categorylist %}
+ 
+                    <img class=Book src="{{ vo.image.url }}" alt='Book1'/>
+
+        {% endfor %}
+
+        <img class=Arrows id=rightArrow src="{% static 'myadmin/local/img/rightarrow.png'%}" alt="rightArrow"/>
     </div>
     <h1 class=PopularLabel>Latest</h1>
     <div class=BooksAndArrows>
-        <img class=Arrows id=leftArrow src='img/leftarrow.png' alt="leftArrow"/>
+        <img class=Arrows id=leftArrow src="{% static 'myadmin/local/img/leftarrow.png'%}" alt="leftArrow"/>
         <ul class=BookContainerItems id="container">
             <li key=Books.id class=BookContainerItem>
                 <div class=BookContainer >
@@ -74,7 +82,7 @@
                 </div>
             </li>
         </ul>
-        <img class=Arrows id=rightArrow src='img/rightarrow.png' alt="rightArrow"/>
+        <img class=Arrows id=rightArrow src="{% static 'myadmin/local/img/rightarrow.png'%}" alt="rightArrow"/>
     </div>
 </body>
 </html>
