--- a/myobject/templates/home/book2.html
+++ b/myobject/templates/home/book2.html
@@ -35,11 +35,11 @@
 <body>
     <div class="nav">
         <!--<h1>Library Management System</h1>-->
-        <a href="{% url 'web_index0' %}"> Library management system </a>
+        <a style="text-decoration: none; color:inherit; padding: 10px 15px" href="{% url 'web_index0' %}"> Library management system </a>
         <ul class="links"> 
-            <li class="items">Popular</li>
-            <li class="items">Latests</li>
-            <li class="items">Books</li>
+          <li class="items"><a style="text-decoration: none; color:inherit"> Popular</a></li>
+          <li class="items">Latest</li>
+          <li class="items"><a style="text-decoration: none; color:inherit" a href="{% url 'web_index' 1 %}"> Books</a></li>
         </ul>
         <!-- <input type='text' id='searchBox' placeholder='Search for book'></input> -->
         <div class="box-tools">
