fixed nav bar for multiple pages and removed unused pages

--- a/webapp2/templates/home/AboutUs.html
+++ b/webapp2/templates/home/AboutUs.html
@@ -39,7 +39,7 @@
     <ul class="links">
       <ul class="links">
         <li class="items"><a style="text-decoration: none; color:inherit" a href="{% url 'about'  %}">About us</a></li>
-        <li class="items"><a style="text-decoration: none; color:inherit" a href="{% url 'web_index' 1 %}">Books</a></li>
+        <li class="items"><a style="text-decoration: none; color:inherit" a href="{% url 'web_index' 1 %}">Browse</a></li>
       </ul>
     </ul>
     <div class="box-tools">
