--- a/webapp2/templates/home/book2.html
+++ b/webapp2/templates/home/book2.html
@@ -38,9 +38,8 @@
         <!--<h1>Library Management System</h1>-->
         <a style="text-decoration: none; color:inherit; padding: 10px 15px; font-size: 50px;" href="{% url 'web_index0' %}"> Library management system </a>
         <ul class="links">
-          <li class="items"><a style="text-decoration: none; color:inherit"> Popular</a></li>
-          <li class="items">Latest</li>
-          <li class="items"><a style="text-decoration: none; color:inherit" a href="{% url 'web_index' 1 %}"> Books</a></li>
+          <li class="items"><a style="text-decoration: none; color:inherit" a href="{% url 'about'  %}"> About us </a></li>
+          <li class="items"><a style="text-decoration: none; color:inherit" a href="{% url 'web_index' 1 %}"> Browse</a></li>
         </ul>
         <!-- <input type='text' id='searchBox' placeholder='Search for book'></input> -->
         <div class="box-tools">
