--- a/webapp2/templates/home/Home.html
+++ b/webapp2/templates/home/Home.html
@@ -35,15 +35,13 @@
   <div class="nav">
     <a style="text-decoration: none; color:inherit; padding: 15px 15px; font-size: 50px;" href="{% url 'web_index0' %}"> Library management system </a>
     <ul class="links">
-      <ul class="links">
-        <li class="items"><a style="text-decoration: none; color:inherit" a href="{% url 'about'  %}"> About us </a></li>
-        <li class="items"><a style="text-decoration: none; color:inherit" a href="{% url 'web_index' 1 %}"> Browse</a></li>
-      </ul>
+      <li class="items"><a style="text-decoration: none; color:inherit" a href="{% url 'about'  %}"> About us </a></li>
+      <li class="items"><a style="text-decoration: none; color:inherit" a href="{% url 'web_index' 1 %}"> Browse</a></li>
     </ul>
     <div class="box-tools">
       <form action="{% url 'web_index' 1 %}" method="get">
         <div class="input-group input-group-sm" style="width: 250px;">
-          <input type="text" name="keyword" class="form-control pull-right" placeholder="Name/Genre/Author">
+          <input type="text" name="keyword" class="form-control pull-right" id="searchBox" placeholder="Name/Genre/Author">
 
           <div class="input-group-btn">
             <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
