--- a/webapp2/templates/myadmin/category/edit.html
+++ b/webapp2/templates/myadmin/category/edit.html
@@ -1,103 +1,92 @@
 {% extends "myadmin/base.html" %}
 
-
 {% block main_body %}
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-      <h1>
-        Book Management
-        <small>Library management</small>
-      </h1>
-      <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i>Home</a></li>
-        <li class="active">Book management</li>
-      </ol>
-    </section>
+<section class="content-header">
+  <h1>
+    Book Management
+    <small>Library management</small>
+  </h1>
+  <ol class="breadcrumb">
+    <li><a href="#"><i class="fa fa-dashboard"></i>Home</a></li>
+    <li class="active">Book management</li>
+  </ol>
+</section>
 
-    <!-- Main content -->
-    <section class="content container-fluid">
+<section class="content container-fluid">
 
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="box">
-            <div class="box-header">
-                <h2 class="box-title"><span class="glyphicon glyphicon-calendar" aria-hidden="true">Edit book information</h2>
-            </div>
-            <!-- /.box-header -->
-            <!-- form start -->
-            <form class="form-horizontal" action="{% url 'myadmin_category_update' category.id  %}" method="post" enctype="multipart/form-data">
-                {% csrf_token %}
-              <div class="box-body">
-                <div class="form-group">
-                  <label for="inputEmail3" class="col-sm-2 control-label">Name：</label>
-
-                  <div class="col-sm-4">
-                    <input type="text" name="name" value="{{category.name}}" class="form-control" id="inputText2" placeholder="name" />
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="inputEmail3" class="col-sm-2 control-label">ISBN：</label>
-
-                  <div class="col-sm-4">
-                    <input type="text" name="ISBN" value="{{category.ISBN}}" class="form-control" id="inputText2" placeholder="ISBN" />
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="inputEmail3" class="col-sm-2 control-label">Genre：</label>
-
-                  <div class="col-sm-4">
-                    <input type="text" name="genre" value="{{category.genre}}" class="form-control" id="inputText2" placeholder="genre" />
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="inputEmail3" class="col-sm-2 control-label">Author：</label>
-
-                  <div class="col-sm-4">
-                    <input type="text" name="author" value="{{category.author}}" class="form-control" id="inputText2" placeholder="author" />
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="inputEmail3" class="col-sm-2 control-label">Description：</label>
-
-                  <div class="col-sm-4">
-                    <input type="text" name="description" value="{{category.description}}" class="form-control" id="inputText2" placeholder="description" />
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label for="inputEmail3" class="col-sm-2 control-label">Image：</label>
-
-                  <div class="col-sm-4">
-                    <input type="file" name="image" value="{{category.image}}" class="form-control" id="inputText2" placeholder="image" />
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label class="col-sm-2 control-label">Current status: </label>
-                  <div class="controls">
-                    &nbsp; &nbsp;
-                    <input type="radio" name="status" class="input-xlarge" value="1"
-                    {% if category.status == 1 %}checked{% endif %} /> Available
-                     &nbsp; &nbsp;
-                    <input type="radio" name="status" class="input-xlarge" value="2"
-                    {% if category.status == 9 %}checked{% endif %} /> Unavailable
-
-
-                  </div>
-                </div>
-              </div>
-              <!-- /.box-body -->
-              <div class="box-footer">
-                <div class="col-sm-offset-2 col-sm-10">
-                  <button type="submit" class="btn btn-primary">Submit</button> &nbsp;
-                  <button type="reset" class="btn btn-default">Reset</button>
-                <div class="col-sm-offset-2 col-sm-10">
-              </div>
-              <!-- /.box-footer -->
-            </form>
-          </div>
-          <!-- /.box -->
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="box">
+        <div class="box-header">
+          <h2 class="box-title"><span class="glyphicon glyphicon-calendar" aria-hidden="true">Edit book information</h2>
         </div>
-      </div>
+        <form class="form-horizontal" action="{% url 'myadmin_category_update' category.id  %}" method="post" enctype="multipart/form-data">
+          {% csrf_token %}
+          <div class="box-body">
+            <div class="form-group">
+              <label for="inputEmail3" class="col-sm-2 control-label">Name：</label>
 
-    </section>
-    <!-- /.content -->
+              <div class="col-sm-4">
+                <input type="text" name="name" value="{{category.name}}" class="form-control" id="inputText2" placeholder="name" />
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="inputEmail3" class="col-sm-2 control-label">ISBN：</label>
+
+              <div class="col-sm-4">
+                <input type="text" name="ISBN" value="{{category.ISBN}}" class="form-control" id="inputText2" placeholder="ISBN" />
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="inputEmail3" class="col-sm-2 control-label">Genre：</label>
+
+              <div class="col-sm-4">
+                <input type="text" name="genre" value="{{category.genre}}" class="form-control" id="inputText2" placeholder="genre" />
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="inputEmail3" class="col-sm-2 control-label">Author：</label>
+
+              <div class="col-sm-4">
+                <input type="text" name="author" value="{{category.author}}" class="form-control" id="inputText2" placeholder="author" />
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="inputEmail3" class="col-sm-2 control-label">Description：</label>
+
+              <div class="col-sm-4">
+                <input type="text" name="description" value="{{category.description}}" class="form-control" id="inputText2" placeholder="description" />
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="inputEmail3" class="col-sm-2 control-label">Image：</label>
+
+              <div class="col-sm-4">
+                <input type="file" name="image" value="{{category.image}}" class="form-control" id="inputText2" placeholder="image" />
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-sm-2 control-label">Current status: </label>
+              <div class="controls">
+                &nbsp; &nbsp;
+                <input type="radio" name="status" class="input-xlarge" value="1" {% if category.status == 1 %}checked{% endif %} /> Available
+                &nbsp; &nbsp;
+                <input type="radio" name="status" class="input-xlarge" value="2" {% if category.status == 9 %}checked{% endif %} /> Unavailable
+
+
+              </div>
+            </div>
+          </div>
+          <div class="box-footer">
+            <div class="col-sm-offset-2 col-sm-10">
+              <button type="submit" class="btn btn-primary">Submit</button> &nbsp;
+              <button type="reset" class="btn btn-default">Reset</button>
+              <div class="col-sm-offset-2 col-sm-10">
+              </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+</section>
 {% endblock %}
